crates/schema/tests/compile_fail/rule_context_removed.stderr
error[E0405]: cannot find trait `RuleContext` in crate `nebula_validator`
 --> tests/compile_fail/rule_context_removed.rs:4:40
  |
4 |     fn _needs_ctx<T: nebula_validator::RuleContext>(_: T) {}
  |                                        ^^^^^^^^^^^ not found in `nebula_validator`
